//
// Copyright 2023 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package oak.attestation.v1;

option go_package = "proto/oak/attestation/v1";
option java_multiple_files = true;
option java_package = "com.google.oak.attestation.v1";

// Endorsement for binaries from the Transparent Release process.
// <https://github.com/project-oak/oak/blob/main/docs/release.md>
message TransparentReleaseEndorsement {
  // The endorsement statement for the underlying binary.
  bytes endorsement = 1;

  // The log entry as proof of inclusion of the endorsement statement in Rekor.
  bytes rekor_log_entry = 2;
}

message RootLayerEndorsements {
  // The serialized TEE certificate(s). The details of the format and how the
  // certificate(s) are encoded into this byte array are implementation
  // specific. In case of AMD-SEV-SNP, as described in
  // https://www.amd.com/system/files/TechDocs/57230.pdf, there are three
  // different certificates packaged in two different files.
  bytes tee_certificate = 1;

  TransparentReleaseEndorsement stage0_endorsement = 2;
};

message KernelLayerEndorsements {
  oneof type {
    TransparentReleaseEndorsement linux_kernel = 1;
    TransparentReleaseEndorsement oak_restricted_kernel = 2;
  }
}

message CustomLayerEndorsements {
  TransparentReleaseEndorsement binary = 1;
}

// Endorsement contains statements that some entity (e.g. a hardware provider)
// vouches for the integrity of claims about the TEE or the software running
// on it.
//
// The name is chosen to match the RATS terminology:
// <https://www.rfc-editor.org/rfc/rfc9334.html#name-endorsements>
message Endorsements {
  RootLayerEndorsements root_layer = 1;                // Layer 0
  KernelLayerEndorsements kernel_layer = 2;            // Layer 1
  repeated CustomLayerEndorsements custom_layers = 3;  // Layers 2 through N
};
